@@ -28,6 +28,11 @@ subprojects {
 
     tasks.withType(Test).configureEach {
         useJUnitPlatform()
+        jvmArgs '--enable-native-access=ALL-UNNAMED'
+    }
+
+    tasks.withType(JavaExec).configureEach {
+        jvmArgs '--enable-native-access=ALL-UNNAMED'
     }
 
     dependencies {
